--- a/presentation.html
+++ b/presentation.html
@@ -73,7 +73,20 @@ class: center, middle
 6. Ask play and enjoy
 7. Live: http://examinator.meteor.com/
 
-
+---
+# Examinator
+## Struktur
+- Client Code unter `client`
+- Server Code unter `server`
+- Sonstiger Code geshared
+## Daten
+- `lib/collections` Collections
+- `server/publications.js` Daten Publikation
+- `client/templates` Handlebar Templates
+## Packages
+- `.meteor/packages` Definition der Verwendeten Packages
+- `aldeed:autoform` Automatische Generation von Forms
+- `aldeed:collection2` Definition der Datenstruktur
 
 ---
 # Erfahrungen
@@ -90,6 +103,7 @@ class: center, middle
 - Noch sehr junges Framework
 - Qualität von Packages sehr unterschiedlich
 - Mini Mongo ist nicht ganz identisch zu MongoDB
+- Dokumentation
 
 ---
 
@@ -107,7 +121,8 @@ class: center, middle
 ##Packages
 [https://atmospherejs.com/](https://atmospherejs.com/)
 
-
+##Guter Start 
+[http://meteorpack.com/](http://meteorpack.com/)
 
     ]
 
